gen/SimplifiedJavaParser.py
# Generated from SimplifiedJava.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class SimplifiedJavaParser(Parser):
    grammarFileName = "SimplifiedJava.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'main'",
        "':'",
        "'end'",
        "';'",
        "'print'",
        "'('",
        "','",
        "')'",
        "'scanf'",
        "'if'",
        "'else'",
        "'while'",
        "'*'",
        "'/'",
        "'+'",
        "'-'",
        "'=='",
        "'!='",
        "'>='",
        "'<='",
        "'>'",
        "'<'",
        "'!'",
        "'void'",
        "'return'",
        "'break'",
        "'var'",
        "'const'",
        "'='",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "String",
        "Int",
        "Float",
        "Boolean",
        "Type",
        "ID",
        "COMMENT",
        "WHITESPACE",
    ]

    RULE_prog = 0
    RULE_main = 1
    RULE_cmds = 2
    RULE_cmd = 3
    RULE_print = 4
    RULE_scanf = 5
    RULE_conditional = 6
    RULE_while = 7
    RULE_expr = 8
    RULE_function = 9
    RULE_functionCall = 10
    RULE_return = 11
    RULE_break = 12
    RULE_declScope = 13
    RULE_constDeclaration = 14
    RULE_variableDeclaration = 15
    RULE_assign = 16
    RULE_arith = 17
    RULE_literal = 18

    ruleNames = [
        "prog",
        "main",
        "cmds",
        "cmd",
        "print",
        "scanf",
        "conditional",
        "while",
        "expr",
        "function",
        "functionCall",
        "return",
        "break",
        "declScope",
        "constDeclaration",
        "variableDeclaration",
        "assign",
        "arith",
        "literal",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    T__20 = 21
    T__21 = 22
    T__22 = 23
    T__23 = 24
    T__24 = 25
    T__25 = 26
    T__26 = 27
    T__27 = 28
    T__28 = 29
    String = 30
    Int = 31
    Float = 32
    Boolean = 33
    Type = 34
    ID = 35
    COMMENT = 36
    WHITESPACE = 37

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ProgContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main(self):
            return self.getTypedRuleContext(SimplifiedJavaParser.MainContext, 0)

        def EOF(self):
            return self.getToken(SimplifiedJavaParser.EOF, 0)

        def function(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SimplifiedJavaParser.FunctionContext)
            else:
                return self.getTypedRuleContext(SimplifiedJavaParser.FunctionContext, i)

        def getRuleIndex(self):
            return SimplifiedJavaParser.RULE_prog

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProg"):
                listener.enterProg(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProg"):
                listener.exitProg(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitProg"):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)

    def prog(self):
        localctx = SimplifiedJavaParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 35:
                self.state = 38
                self.function()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.main()
            self.state = 45
            self.match(SimplifiedJavaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MainContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declScope(self):
            return self.getTypedRuleContext(SimplifiedJavaParser.DeclScopeContext, 0)

        def cmd(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SimplifiedJavaParser.CmdContext)
            else:
                return self.getTypedRuleContext(SimplifiedJavaParser.CmdContext, i)

        def getRuleIndex(self):
            return SimplifiedJavaParser.RULE_main

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterMain"):
                listener.enterMain(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitMain"):
                listener.exitMain(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitMain"):
                return visitor.visitMain(self)
            else:
                return visitor.visitChildren(self)

    def main(self):
        localctx = SimplifiedJavaParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_main)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(SimplifiedJavaParser.T__0)
            self.state = 48
            self.match(SimplifiedJavaParser.T__1)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 27:
                self.state = 49
                self.declScope()

            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and ((1 << _la) & 34460407328) != 0:
                self.state = 52
                self.cmd()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self.match(SimplifiedJavaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CmdsContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmd(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SimplifiedJavaParser.CmdContext)
            else:
                return self.getTypedRuleContext(SimplifiedJavaParser.CmdContext, i)

        def getRuleIndex(self):
            return SimplifiedJavaParser.RULE_cmds

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterCmds"):
                listener.enterCmds(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitCmds"):
                listener.exitCmds(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCmds"):
                return visitor.visitCmds(self)
            else:
                return visitor.visitChildren(self)

    def cmds(self):
        localctx = SimplifiedJavaParser.CmdsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_cmds)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and ((1 << _la) & 34460407328) != 0:
                self.state = 60
                self.cmd()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CmdContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(SimplifiedJavaParser.AssignContext, 0)

        def functionCall(self):
            return self.getTypedRuleContext(SimplifiedJavaParser.FunctionCallContext, 0)

        def break_(self):
            return self.getTypedRuleContext(SimplifiedJavaParser.BreakContext, 0)

        def return_(self):
            return self.getTypedRuleContext(SimplifiedJavaParser.ReturnContext, 0)

        def conditional(self):
            return self.getTypedRuleContext(SimplifiedJavaParser.ConditionalContext, 0)

        def while_(self):
            return self.getTypedRuleContext(SimplifiedJavaParser.WhileContext, 0)

        def print_(self):
            return self.getTypedRuleContext(SimplifiedJavaParser.PrintContext, 0)

        def scanf(self):
            return self.getTypedRuleContext(SimplifiedJavaParser.ScanfContext, 0)

        def getRuleIndex(self):
            return SimplifiedJavaParser.RULE_cmd

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterCmd"):
                listener.enterCmd(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitCmd"):
                listener.exitCmd(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCmd"):
                return visitor.visitCmd(self)
            else:
                return visitor.visitChildren(self)

    def cmd(self):
        localctx = SimplifiedJavaParser.CmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_cmd)
        try:
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25, 26, 35]:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input, 4, self._ctx)
                if la_ == 1:
                    self.state = 66
                    self.assign()
                    pass

                elif la_ == 2:
                    self.state = 67
                    self.functionCall()
                    pass

                elif la_ == 3:
                    self.state = 68
                    self.break_()
                    pass

                elif la_ == 4:
                    self.state = 69
                    self.return_()
                    pass

                self.state = 72
                self.match(SimplifiedJavaParser.T__3)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.conditional()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 3)
                self.state = 75
                self.while_()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 76
                self.print_()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 5)
                self.state = 77
                self.scanf()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrintContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SimplifiedJavaParser.ExprContext)
            else:
                return self.getTypedRuleContext(SimplifiedJavaParser.ExprContext, i)

        def getRuleIndex(self):
            return SimplifiedJavaParser.RULE_print

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPrint"):
                listener.enterPrint(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPrint"):
                listener.exitPrint(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPrint"):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)

    def print_(self):
        localctx = SimplifiedJavaParser.PrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_print)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(SimplifiedJavaParser.T__4)
            self.state = 81
            self.match(SimplifiedJavaParser.T__5)
            self.state = 82
            self.expr(0)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 7:
                self.state = 83
                self.match(SimplifiedJavaParser.T__6)
                self.state = 84
                self.expr(0)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(SimplifiedJavaParser.T__7)
            self.state = 91
            self.match(SimplifiedJavaParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ScanfContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i: int = None):
            if i is None:
                return self.getTokens(SimplifiedJavaParser.ID)
            else:
                return self.getToken(SimplifiedJavaParser.ID, i)

        def getRuleIndex(self):
            return SimplifiedJavaParser.RULE_scanf

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterScanf"):
                listener.enterScanf(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitScanf"):
                listener.exitScanf(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitScanf"):
                return visitor.visitScanf(self)
            else:
                return visitor.visitChildren(self)

    def scanf(self):
        localctx = SimplifiedJavaParser.ScanfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_scanf)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(SimplifiedJavaParser.T__8)
            self.state = 94
            self.match(SimplifiedJavaParser.T__5)
            self.state = 95
            self.match(SimplifiedJavaParser.ID)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 7:
                self.state = 96
                self.match(SimplifiedJavaParser.T__6)
                self.state = 97
                self.match(SimplifiedJavaParser.ID)
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.match(SimplifiedJavaParser.T__7)
            self.state = 104
            self.match(SimplifiedJavaParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionalContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ifCmds = None  # CmdsContext
            self.elseCmds = None  # CmdsContext

        def expr(self):
            return self.getTypedRuleContext(SimplifiedJavaParser.ExprContext, 0)

        def cmds(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SimplifiedJavaParser.CmdsContext)
            else:
                return self.getTypedRuleContext(SimplifiedJavaParser.CmdsContext, i)

        def getRuleIndex(self):
            return SimplifiedJavaParser.RULE_conditional

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterConditional"):
                listener.enterConditional(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitConditional"):
                listener.exitConditional(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitConditional"):
                return visitor.visitConditional(self)
            else:
                return visitor.visitChildren(self)

    def conditional(self):
        localctx = SimplifiedJavaParser.ConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_conditional)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(SimplifiedJavaParser.T__9)
            self.state = 107
            self.match(SimplifiedJavaParser.T__5)
            self.state = 108
            self.expr(0)
            self.state = 109
            self.match(SimplifiedJavaParser.T__7)
            self.state = 110
            self.match(SimplifiedJavaParser.T__1)
            self.state = 111
            localctx.ifCmds = self.cmds()
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 11:
                self.state = 112
                self.match(SimplifiedJavaParser.T__10)
                self.state = 113
                self.match(SimplifiedJavaParser.T__1)
                self.state = 114
                localctx.elseCmds = self.cmds()

            self.state = 117
            self.match(SimplifiedJavaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhileContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(SimplifiedJavaParser.ExprContext, 0)

        def cmd(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SimplifiedJavaParser.CmdContext)
            else:
                return self.getTypedRuleContext(SimplifiedJavaParser.CmdContext, i)

        def getRuleIndex(self):
            return SimplifiedJavaParser.RULE_while

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterWhile"):
                listener.enterWhile(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitWhile"):
                listener.exitWhile(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitWhile"):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)

    def while_(self):
        localctx = SimplifiedJavaParser.WhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_while)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(SimplifiedJavaParser.T__11)
            self.state = 120
            self.match(SimplifiedJavaParser.T__5)
            self.state = 121
            self.expr(0)
            self.state = 122
            self.match(SimplifiedJavaParser.T__7)
            self.state = 123
            self.match(SimplifiedJavaParser.T__1)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and ((1 << _la) & 34460407328) != 0:
                self.state = 124
                self.cmd()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self.match(SimplifiedJavaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return SimplifiedJavaParser.RULE_expr

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class EvalTargetContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a SimplifiedJavaParser.ExprContext
            super().__init__(parser)
            self.eval_ = None  # ArithContext
            self.copyFrom(ctx)

        def arith(self):
            return self.getTypedRuleContext(SimplifiedJavaParser.ArithContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterEvalTarget"):
                listener.enterEvalTarget(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitEvalTarget"):
                listener.exitEvalTarget(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitEvalTarget"):
                return visitor.visitEvalTarget(self)
            else:
                return visitor.visitChildren(self)

    class NotContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a SimplifiedJavaParser.ExprContext
            super().__init__(parser)
            self.op = None  # Token
            self.operand = None  # ExprContext
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SimplifiedJavaParser.ExprContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterNot"):
                listener.enterNot(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitNot"):
                listener.exitNot(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitNot"):
                return visitor.visitNot(self)
            else:
                return visitor.visitChildren(self)

    class MultContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a SimplifiedJavaParser.ExprContext
            super().__init__(parser)
            self.left = None  # ExprContext
            self.op = None  # Token
            self.right = None  # ExprContext
            self.copyFrom(ctx)

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SimplifiedJavaParser.ExprContext)
            else:
                return self.getTypedRuleContext(SimplifiedJavaParser.ExprContext, i)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterMult"):
                listener.enterMult(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitMult"):
                listener.exitMult(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitMult"):
                return visitor.visitMult(self)
            else:
                return visitor.visitChildren(self)

    class ParensContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a SimplifiedJavaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SimplifiedJavaParser.ExprContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParens"):
                listener.enterParens(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParens"):
                listener.exitParens(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitParens"):
                return visitor.visitParens(self)
            else:
                return visitor.visitChildren(self)

    class SumContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a SimplifiedJavaParser.ExprContext
            super().__init__(parser)
            self.left = None  # ExprContext
            self.op = None  # Token
            self.right = None  # ExprContext
            self.copyFrom(ctx)

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SimplifiedJavaParser.ExprContext)
            else:
                return self.getTypedRuleContext(SimplifiedJavaParser.ExprContext, i)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSum"):
                listener.enterSum(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSum"):
                listener.exitSum(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSum"):
                return visitor.visitSum(self)
            else:
                return visitor.visitChildren(self)

    class LogicContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a SimplifiedJavaParser.ExprContext
            super().__init__(parser)
            self.left = None  # ExprContext
            self.op = None  # Token
            self.right = None  # ExprContext
            self.copyFrom(ctx)

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SimplifiedJavaParser.ExprContext)
            else:
                return self.getTypedRuleContext(SimplifiedJavaParser.ExprContext, i)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLogic"):
                listener.enterLogic(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLogic"):
                listener.exitLogic(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLogic"):
                return visitor.visitLogic(self)
            else:
                return visitor.visitChildren(self)

    def expr(self, _p: int = 0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SimplifiedJavaParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_expr, _p)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16, 23]:
                localctx = SimplifiedJavaParser.NotContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 133
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not (_la == 16 or _la == 23):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 134
                localctx.operand = self.expr(3)
                pass
            elif token in [30, 31, 32, 33, 35]:
                localctx = SimplifiedJavaParser.EvalTargetContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 135
                localctx.eval_ = self.arith()
                pass
            elif token in [6]:
                localctx = SimplifiedJavaParser.ParensContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 136
                self.match(SimplifiedJavaParser.T__5)
                self.state = 137
                self.expr(0)
                self.state = 138
                self.match(SimplifiedJavaParser.T__7)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 153
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 12, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 151
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input, 11, self._ctx)
                    if la_ == 1:
                        localctx = SimplifiedJavaParser.MultContext(
                            self,
                            SimplifiedJavaParser.ExprContext(
                                self, _parentctx, _parentState
                            ),
                        )
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expr
                        )
                        self.state = 142
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 6)"
                            )
                        self.state = 143
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not (_la == 13 or _la == 14):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 144
                        localctx.right = self.expr(7)
                        pass

                    elif la_ == 2:
                        localctx = SimplifiedJavaParser.SumContext(
                            self,
                            SimplifiedJavaParser.ExprContext(
                                self, _parentctx, _parentState
                            ),
                        )
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expr
                        )
                        self.state = 145
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 5)"
                            )
                        self.state = 146
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not (_la == 15 or _la == 16):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 147
                        localctx.right = self.expr(6)
                        pass

                    elif la_ == 3:
                        localctx = SimplifiedJavaParser.LogicContext(
                            self,
                            SimplifiedJavaParser.ExprContext(
                                self, _parentctx, _parentState
                            ),
                        )
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expr
                        )
                        self.state = 148
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 4)"
                            )
                        self.state = 149
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not ((((_la) & ~0x3F) == 0 and ((1 << _la) & 8257536) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 150
                        localctx.right = self.expr(5)
                        pass

                self.state = 155
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 12, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class FunctionContext(ParserRuleContext):
        __slots__ = "parser"
